# routes/api.php
@@ -43,33 +43,15 @@ Route::prefix('v1')->name('api.')->group(function () {
 
     Route::middleware(['auth:sanctum', 'api.version:v1'])->group(function () {
         Route::prefix('barantin')->name('barantin.')->group(function () {
-            Route::prefix('perusahaan')->name('perusahaan.')->group(function () {
 
-                Route::get('induk/{take}', [BarantinController::class, 'getAllDataBarantinPerusahaanInduk'])->name('induk.get');
-                Route::get('cabang/{take}', [BarantinController::class, 'getAllDataBarantinPerusahaanCabang'])->name('cabang.get');
-                Route::get('induk/{barantin_id}/detil', [BarantinController::class, 'detilDataBarantinPerusahaanIndukBarantinID'])->name('induk.detil');
-                Route::get('cabang/{barantin_id}/detil', [BarantinController::class, 'detilDataBarantinPerusahaanCabangByBarantinID'])->name('cabang.detil');
-            });
-
-            Route::get('perorangan/{take}', [BarantinController::class, 'getAllDataBarantinPerorangan'])->name('perorangan.get');
-            Route::get('perorangan/{barantin_id}/detil', [BarantinController::class, 'detilDataBarantinPeroranganByBarantinID'])->name('perorangan.detil');
-            Route::get('{register_id}/register', [BarantinController::class, 'getDataBarantinByRegisterID'])->name('barantin.detail.get');
+            Route::get('{take}', [BarantinController::class, 'getAllDataBarantin'])->name('all');
+            Route::get('{npwp}/cabang', [BarantinController::class, 'getAllDataBarantinPerusahaanCabang'])->name('cabang');
+            Route::get('{barantin_id}/detil', [BarantinController::class, 'detilDataBarantinById'])->name('detil');
+            Route::get('{register_id}/register', [BarantinController::class, 'getDataBarantinByRegisterID'])->name('register.detil');
         });
         Route::prefix('mitra')->name('mitra.')->group(function () {
-
+            Route::get('{barantin_id}/barantin', [BarantinMitraController::class, 'GetAllDataMitraByBarantinID'])->name('all.barantin');
             Route::get('{mitra_id}', [BarantinMitraController::class, 'GetAllDataMitraByID'])->name('find.one');
-
-            Route::prefix('pj')->name('pj.')->group(function () {
-                Route::get('{barantin_id}', [BarantinMitraController::class, 'GetAllDataMitraByBaratinID'])->name('induk.get');
-
-                Route::get('induk/{barantin_id}', [BarantinMitraController::class, 'GetAllDataMitraByBaratinIndukID'])->name('induk.get');
-                Route::get('cabang/{barantin_cabang_id}', [BarantinMitraController::class, 'GetAllDataMitraByBaratinCabangID'])->name('cabang.get');
-
-                Route::prefix('all')->name('all.')->group(function () {
-                    Route::get('induk/{take}', [BarantinMitraController::class, 'GetAllDataMitraInduk'])->name('induk');
-                    Route::get('cabang/{take}', [BarantinMitraController::class, 'GetAllDataMitraCabang'])->name('cabang');
-                });
-            });
         });
         Route::prefix('ppjk')->name('ppjk.')->group(function () {
             Route::get('cek-npwp', [BarantinPpjkController::class, 'cekNpwpPpjk'])->name('cek.npwp');
@@ -100,7 +82,7 @@ Route::prefix('v2')->name('api.')->group(function () {
 
             Route::prefix('cabang')->name('cabang.')->group(function () {
                 Route::get('', [CabangController::class, 'getCabangPerusahaanInduk'])->name('all.user');
-                Route::get('{barantin_cabang_id}', [CabangController::class, 'getDetailCabangPerusahaanInduk'])->name('one.user');
+                Route::get('{barantin_id}', [CabangController::class, 'getDetailCabangPerusahaanInduk'])->name('one.user');
             });
 
             Route::prefix('ppjk')->name('ppjk.')->group(function () {
